--- a/cah-data/cah-data.csproj
+++ b/cah-data/cah-data.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{DB382B48-8E2A-40DF-AE19-6AE0A315C1C5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>cah_data</RootNamespace>
+    <RootNamespace>CAHData</RootNamespace>
     <AssemblyName>cah-data</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
